--- a/DataAccess.Sql/packages.config
+++ b/DataAccess.Sql/packages.config
@@ -2,4 +2,10 @@
 <packages>
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.13" targetFramework="net452" />
+  <package id="Npgsql" version="4.0.5" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
